main.css
/* main.css */

html, head, body, header, section, nav, h1, h2, h3, h4, ul, ol, li, a, div {
  padding: 0;
  border: 0;
  margin: 0;
  font: inherit;
  font-size: 100%;
}
html, body {
  font-family: "Open Sans",sans-serif;
  height: 100%;
  width: 100%;
  min-width: 1340px;
  margin: 0;
}
body, input, textarea, select {
  color: #37363b;
	font-family: "Open Sans",sans-serif;
 	font-size: 15px;
}
header{
	background-color: white;
  	box-sizing: border-box;
  	width: 100%;
  	height: 115px;
  	min-width: 1250px;
  	box-shadow: 0 1px 25px rgba(0,0,0,0.4);
  	position: relative;
  	z-index: 1000;
}
/*Remove to finalize website
main{
  min-height: 1000px;
}*/
h1{
  font-size: 60px;
  font-family: "Open Sans",sans-serif;
  margin: 0;
}
h2{
  font-size: 40px;
  font-family: "Open Sans",sans-serif;
  margin: 0;
}
h3{
  font-size: 30px;
  font-family: "Open Sans",sans-serif;
  margin: 0;
}
a {
  color: #b9b7bf;
  font-size: 14px;
  line-height: 14px;
  text-align: center;
  display: block;
  float: right;
  box-sizing: border-box;
  width: 45px;
  height: 44px;
  padding: 15px;
}
p, ul, ol {
  line-height: 25px;
  margin-top: 25px;
  margin-bottom: 0;
  font-family: "Open Sans",sans-serif;
}
li{
  font-size: 25px;
  font-family: "Open Sans",sans-serif;
  margin: 0;
}
footer{
  
}
.ijyk-logo-outer{
	text-decoration: none;
  float: left;
  background-color: white;
  box-sizing: border-box;
  width: 340px;
  height: 115px;
  padding: 20px;
  border-right: 1px solid #dcdbdf;
  position: relative;
  z-index: 1001;
}
.ijyk-logo{
	 display: block;
	 width: 300px;
	 height: 75px;
	 border: 0;
}
.social-media{
	 height: 57px;
	 width:;
}
.label{
	 display: none;
}
.contact-nav-outer{
    width: 100%;
    height: 115px;
}
.contact{
    height: 44px;
    border-bottom: 1px solid #dcdbdf;
}
.twitter-container{
    width: 300px;
    height: 500px;
    float: right;
}
.ScrollingBanner-container{
    background: url("images/backgrounds/gitwebsite-grey.jpg");
    box-shadow: inset 1px 1px 10px #000000,
                inset -1px -1px 10px #000000;
}
.banner-container {
    position: relative;
    display: block;
    width: 1340px;
    height: 500px;
    overflow: hidden;
    margin: 10px auto;
    min-width: 1000px;
}
.photobanner {
    height: 480px;
    width: 6000px;
    margin-top: 10px;
    position: absolute;
}
.photobanner img{
    width: 853px;
    height: 480px;
    z-index: 1000;
}
.shading{
    background-color: rgba(0, 0, 0, 0.5);
    color: #37363b;
    font-family: "Open Sans",sans-serif;
    font-size: 40px;
    z-index: 1002;
    position: absolute;
    width: 100%;
    height: 480px;
    margin-top: 10px;
}
.scrolling-text{
    display: block;
    width: 550px;
    height: 125px;
    position: relative;
    background-color: #FFFFFF;
    border-radius: 10px;
    margin: 175px auto;
    z-index: 1003;
    padding: 10px;
}
.scrolling-text-link {
  color: #000000;
  font-size: 32px;
  line-height: 40px;
  text-align: center;
  display: inline;
  width: 550px;
  height: 125px;
  padding: 25px 15px 25px 15px;
  text-decoration: none;
  box-shadow: 0px 0px 5px 2px rgba(0,0,0,0.36);
  border-radius: 2px;
}
.scrolling-text-link:hover {
  box-shadow: inset 0px 0px 5px 2px rgba(0,0,0,0.36);
}
/*keyframe animations*/
.first{
    -webkit-animation: bannermove 70s linear infinite;
       -moz-animation: bannermove 70s linear infinite;
        -ms-animation: bannermove 70s linear infinite;
         -o-animation: bannermove 70s linear infinite;
            animation: bannermove 70s linear infinite;
}
@keyframes "bannermove" {
 0% {
    margin-left: 0px;
 }
 100% {
    margin-left: -3430px;
 }
 
}
 
@-moz-keyframes bannermove {
 0% {
   margin-left: 0px;
 }
 100% {
    margin-left: -3430px;
 }
 
}
 
@-webkit-keyframes "bannermove" {
 0% {
    margin-left: 0px;
 }
 100% {
    margin-left: -3430px;
 }
 
}
 
@-ms-keyframes "bannermove" {
 0% {
    margin-left: 0px;
 }
 100% {
    margin-left: -3430px;
 }
 
}
 
@-o-keyframes "bannermove" {
 0% {
    margin-left: 0px;
 }
 100% {
    margin-left: -3430px;
 }
 
}
.main{
    position: relative;
    z-index: 1000;
}
.nav-items {
    line-height: 1;
    list-style: none;
    padding: 0;
    margin: 0;
}
.nav-items-top {
    content: " ";
    display: table;
}
.nav-items-top a {
    color: #68666f;
    text-decoration: none;
    display: block;
}
.nav-item-top {
    float: left;
}
.nav-item-top a {
  font-weight: 700;
  font-size: 20px;
  box-sizing: border-box;
  height: 70px;
  width: 130px;
  padding: 26px;
  border-top: 1px solid transparent;
  border-right: 1px solid #dcdbdf;
  line-height: 18px;
}
.nav-item-top a:hover {
  background-color: #f3f3f3;
}
.featured-video-twitter-container{
  width: 1340px;
  height: 563px;
  margin: 10px auto;
  list-style-type: none;
  padding: 0px 0px;
  }
.featured-video{
  width: 938px;
  float: left;
  padding: 10px 14px 0px 0px;
  border-right: 1px solid #dcdbdf;
  margin: 0px auto;
}
.twitter-container{
  height: 530px;
  width: 372px;
  float: left;
  padding: 10px 0px 0px 14px;
  margin: 0px auto;
}
.about-background {
  background-color: #ffffff;
}
.about-title {
  text-align: center;
  width: 100%;
  margin: 25px 0 0px 0;
}
.about-header {
  width: 1340px;
  margin: 15px auto 25px auto;
  color: #000000;
  background-color: #ffffff;
  display: table;
  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.36);
}
.about-header-summary {
  float: left;
  width: 619px;
  padding: 10px 35px 0px 10px;
  margin: 20px 5px 20px 0px;
  height: 516px;
  border-right: 1px solid #dcdbdf;
}
.about-header-summary-title {
  text-align: center;
}
.about-header-summary h3{
  padding: 50px 15px 0px 15px;
}
.about-header-points {
  float: left;
  width: 619px;
  padding: 10px 10px 0px 40px;
  margin-top: 15px;
  height: 516px;
}
.about-header-points ul{
  list-style-type: none;
  line-height: 250%;
}
.hangingindent {
  padding-left: 22px ;
  text-indent: -22px ;
}
.about-skills{
  width: 1340px;
  height: 702px;
  margin: 15px auto;
  color: #000000;
  background-color: #ffffff;
  display: block;
}
.about-skills-title strong{
  width: 938px;
  margin-left: 80px;
  line-height: 55px;
}
.about-skills-wrapper{
  width: 260px;
  height: 301px;
  float: left;
  margin: 10px 93px 10px 93px;
  padding: 10px 20px 20px 20px;
  text-align: left;
  line-height: 41px;
  text-decoration: none;
  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.36);
}
.about-skills-wrapper:hover {
  box-shadow: 0px 2px 15px 1px rgba(0,0,0,0.50);
  background-color: #f3f3f3;
}
.about-skills-wrapper h3{
  width: 220px;
  display: inline;
  color: #000000;
  font-size: 30px;
}
#about-img-link{
  width: 220px;
  height: 261px;
}
.skill-badge{
  width: 220px;
  height: 220px;
  /*margin-top: 50px;
  margin-left: 210px;*/
}
.footer-container {
  width: 100%;
  height: 48px;
  box-sizing: border-box;
  border-top: 1px solid #dcdbdf;
  margin-top: 30px;
  box-shadow: 0 1px 25px rgba(0,0,0,0.4);
}
.contact-footer{
    height: 48px;
    width: 470px;
    margin: 0 auto;
}
.contact-footer a{
    color: #b9b7bf;
    font-size: 24px;
    line-height: 24px;
    text-align: center;
    display: inline;
    width: 24px;
    height: 24px;
    margin: 12px 35px 12px 35px;
    padding: 0;
}
.contact-social-link-instagram{
  margin-left: auto;
}
.video-background {
  background-color: #ffffff;
  height: auto;
}
.video-header {
  width: 1340px;
  margin: 0 auto;
  text-align: center;
}
.video-header-title {
  width: 100%;
  margin: 25px 0px 0px 0px;
  line-height: 50px;
}
.video-header p {
  margin: 0;
}
.video-main-container{
  width: 1340px;
  margin: 15px auto;
  display: table;
}
.video-main-container a {
  color: #000;
  text-align: left;
  display: block;
  float: none;
  box-sizing: content-box;
  width: 100%;
  height: 182px;
  padding: 0px;
}
.video-box-wrapper{
  height: 182px;
  width: 1340px;
  float: left;
  list-style-type: none;
  position: relative;
  border-bottom: 1px solid #dcdbdf;
  margin-bottom: 20px;
  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.36);
}
.video-box-wrapper:hover{
  box-shadow: 0px 2px 15px 1px rgba(0,0,0,0.50);
  background-color: #f3f3f3;
}
.video-box-float {
  float: left;
}
.video-box-metadata {
  height: 162px;
  padding: 10px;
}
.video-box-metadata h3 {
  font-size: 35px;
  line-height: 35px;
  margin: 0;
  font-weight: 600;
}
#video-box-metadata-date{
  line-height: 30px;
  margin: 0;
  border: 0;
  padding: 0;
}
.video-box-metadata p {
  font-size: 15px;
  line-height: 17px;
  margin-top: 10px;
  color: #37363B;
  opacity: 0.80;
  border-top: 1px solid #dcdbdf;
  padding: 20px 0px;
}
.video-box-image img {
  width: 288px;
  height: 162px;
  border-right: 1px solid #dcdbdf;
  margin: 10px 10px 10px 10px;
  padding-right: 10px;
  
}
.video-page-button {
  width: 186px;
  height: 25px;
  margin: 10px auto;
  text-align: center;
  display: table;
  float: none;
  font-weight: bold;
}
.video-next-page-button {
  border: 1px solid #dcdbdf;
  width: 81px;
  display: inline;
  float: left;
  margin-left: 20px;
  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.40);
}
.video-next-page-button:hover {
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.36);
  background-color: #eeeeee;
}
.video-next-page-button p{
  width: 75px;
  font-size: 25px;
  margin: 0;
  padding: 3px;
}
.video-last-page-button {
  border: 1px solid #dcdbdf;
  width: 81px;
  display: inline;
  float: left;
  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.40)
}
.video-last-page-button:hover {
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.36);
  background-color: #eeeeee;
}
.video-last-page-button p {
  width: 75px;
  margin: 0;
  font-size: 25px;
  padding: 3px;
}
#video-page-a {
  width: 81px;
  height: 31px;
  text-decoration: none;
  padding: 0;
  color: #37363b;
}
#button-style-null {
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.20);
  border: 1px solid #ffffff;
  background-color: #eeeeee;
}
#featured-video-temp {
  margin-bottom: 15px;
}
.twitch-background{
  width: 1340px;
  height: auto;
  display: table;
  margin: 30px auto 0px auto; 
  /*box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.36);*/
}
.twitch-video-container{
  width: 919px;
  height: 610px;
  float: left;
  background-color: #f2f2f2;
  margin-right: 28px;
  margin-top: 30px;
  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.36);
}
.twitch-chat-container{
  width: 378px;
  height: 610px;
  float: left;
}
.twitch-video{
  margin: 25px 21px 0px 21px;
  height: 525px;
  width: 877px;
  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.36);
}
.twitch-chat{
  margin: 30px 0px 20px 0px;
  width: 350px;
  height: 610px;
  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.36);
}
.twitch-channel-actions{
  height: 30px;
  margin: 15px 0 0px 21px;
  width: auto;
  display: table;
}
.twitch-follow-button{
  height: 30px;
  width: 76px;
  box-shadow: 0px 0px 7px 1px rgba(0,0,0,0.36);
  background-color: #5A3A94;
}
.twitch-follow-button:hover{
  height: 30px;
  width: 76px;
  box-shadow: 1px 1px 10px 1px rgba(0,0,0,0.50);
  background-color: #6441a5;
}
.twitch-follow-button img{
  height: 16px;
  width: 16px;
  float: left;
  padding: 7px;
}
#twitch-follow-link{
  height: 30px;
  width: 76px;
  float: left;
  padding: 0;
  text-decoration: none;
}
#twitch-follow{
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 12px;
  color: rgb(255, 255, 255);
  margin: 0;
  line-height: 30px;
  height: 14px;
  width: 36px;
  float: left;
}

